Disabling the export title prompt and the browser action as need to squash bugs and options panel before adding new features.

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -12,6 +12,7 @@ body {
 #presets {
   margin: 0;
   overflow: auto;
+  max-height: 300px;
 }
 
   #presets li {
